Added measuring sticks to check scale of Fort Amsterdam

--- a/ManhattanBuildings/Config/DefaultEngine.ini
+++ b/ManhattanBuildings/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/1660.1660
+EditorStartupMap=/Game/1660.1660
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
