Moved camera position, lowered "landscape" by 20cm to make map visible

--- a/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -163,7 +163,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/OpenWorld
+LastLevel=/Game/1660
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -185,7 +185,6 @@ PrimitiveComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TimeWalkMaterials/1660CastelloColor.1660CastelloColor
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
