Added Unreal GeoReference plugin, set to Bowling Green coordinates

--- a/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -832,11 +832,22 @@ SceneComponent.Cooking=True
 Landscape.DataLayers=True
 MaterialExpressionLandscapeLayerBlend.MaterialExpressionLandscapeLayerBlend=True
 MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
+BP_Galleon_C.TransformCommon=True
+BP_Galleon_C.Rendering=True
+BP_Galleon_C.Replication=True
+BP_Galleon_C.Collision=True
+BP_Galleon_C.HLOD=True
+BP_Galleon_C.Physics=True
+BP_Galleon_C.Networking=True
+BP_Galleon_C.WorldPartition=True
+BP_Galleon_C.Input=True
+BP_Galleon_C.Actor=True
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
 
 [PlacementMode]
+RecentlyPlaced=/Game/Galleon/Blueprints/BP_Galleon.BP_Galleon;
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Window_02_1st_Floor_004.Old_Medieval_Windmill_01_SM_Window_02_1st_Floor_004;
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Window_02_1st_Floor_003.Old_Medieval_Windmill_01_SM_Window_02_1st_Floor_003;
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Window_02_1st_Floor_002.Old_Medieval_Windmill_01_SM_Window_02_1st_Floor_002;
@@ -856,7 +867,6 @@ RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Sails_1.Old_Medi
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Roof_Window.Old_Medieval_Windmill_01_SM_Roof_Window;
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Ground.Old_Medieval_Windmill_01_SM_Ground;
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Gear_1.Old_Medieval_Windmill_01_SM_Gear_1;
-RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Floor_2.Old_Medieval_Windmill_01_SM_Floor_2;
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -871,7 +881,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/1660_Buildings
+ContentBrowserDrawer.SelectedPaths=/Game/Galleon/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -895,7 +905,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1168,7 +1178,7 @@ PerWorldEditorSettings=(("/Game/1660.1660", (LoadedEditorRegions=((Min=(X=-10248
 /Game/TimeWalkMaterials/LayeredGrass.LayeredGrass=1
 
 [RootWindow]
-ScreenPosition=X=434.000 Y=80.000
+ScreenPosition=X=97.000 Y=88.000
 WindowSize=X=1857.000 Y=1169.000
 InitiallyMaximized=False
 
