--- a/UE5ProjectFiles/ManhattanBuildings.uproject
+++ b/UE5ProjectFiles/ManhattanBuildings.uproject
@@ -14,6 +14,10 @@
 		{
 			"Name": "DatasmithImporter",
 			"Enabled": true
+		},
+		{
+			"Name": "GeoReferencing",
+			"Enabled": true
 		}
 	]
 }
