Added FrostedGlass material for placeholder buildings

--- a/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,7 +127,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
-CameraSpeedScalar=15.000000
+CameraSpeedScalar=28.710220
 FlightCameraControlExperimentalNavigation=False
 MinimumOrthographicZoom=250.000000
 bAllowArcballRotate=False
@@ -163,7 +163,6 @@ MRUItem0=/Game/1660
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [EditorStartup]
 LastLevel=/Game/1660
@@ -265,6 +264,7 @@ Landscape="\"Object.Landscape.PerLODOverrideMaterials\" "
 LandscapeProxy="\"Object.Landscape.PerLODOverrideMaterials\" "
 PartitionActor="\"Object.Landscape.PerLODOverrideMaterials\" "
 MaterialExpressionLandscapeLayerBlend="\"Object\" "
+LandscapeStreamingProxy="\"Object.Landscape.PerLODOverrideMaterials\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -303,7 +303,7 @@ LandscapeStreamingProxy.Input=True
 LandscapeStreamingProxy.Actor=True
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
-StaticMeshActor.Materials=False
+StaticMeshActor.Materials=True
 StaticMeshActor.Physics=False
 StaticMeshActor.Collision=False
 StaticMeshActor.Lighting=True
@@ -847,6 +847,7 @@ BP_Galleon_C.Actor=True
 InstalledPlugins=WMFCodecs
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Galleon/Blueprints/BP_Galleon.BP_Galleon;
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Window_02_1st_Floor_004.Old_Medieval_Windmill_01_SM_Window_02_1st_Floor_004;
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Window_02_1st_Floor_003.Old_Medieval_Windmill_01_SM_Window_02_1st_Floor_003;
@@ -866,7 +867,6 @@ RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Windmill_Door_2_
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Sails_1.Old_Medieval_Windmill_01_SM_Sails_1;
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Roof_Window.Old_Medieval_Windmill_01_SM_Roof_Window;
 RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Ground.Old_Medieval_Windmill_01_SM_Ground;
-RecentlyPlaced=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Gear_1.Old_Medieval_Windmill_01_SM_Gear_1;
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -881,7 +881,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Galleon/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/TimeWalkMaterials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -952,34 +952,35 @@ ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
 
 [DetailCategoriesAdvanced]
-StaticMeshActor.StaticMesh=False
+StaticMeshActor.StaticMesh=True
 Texture2D.Texture=True
 MaterialEditorInstanceConstant.General=False
 Texture2D.Compositing=False
 Texture2D.LevelOfDetail=False
 LandscapeEditorObject.Tool Settings=True
+StaticMeshActor.Materials=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TimeWalkMaterials/LayeredGrass
-MRUItem1=/Game/StarterContent/Materials/M_Ground_Grass
-MRUItem2=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Windmill_Wall
-MRUItem3=/Game/TimeWalkMaterials/1660CastelloColor
-MRUItem4=/Game/1660_Buildings/F01/Geometries/ROOF__Plane
-MRUItem5=/Game/1660_Buildings/F01/Textures/tloleayo_2K_Albedo_jpg
-MRUItem6=/Game/1660_Buildings/F01/Materials/ROOF
-MRUItem7=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem8=/Game/1660_Buildings/F01/Materials/References/ROOF
-MRUItem9=/Game/1660_Buildings/F03/Materials/References/Polished_Concrete_Old
-MRUItem10=/Game/1660_Buildings/F03/Materials/Polished_Concrete_Old
-MRUItem11=/Game/1660_Buildings/F01/Textures/Rock_cold_Albedo_jpg
-MRUItem12=/Game/1660_Buildings/F01/Materials/Rock
-MRUItem13=/Game/1660_Buildings/F01/Materials/References/Wood
-MRUItem14=/Game/1660_Buildings/F02/Materials/References/ROOF
-MRUItem15=/Game/1660_Buildings/F02/Materials/ROOF
-MRUItem16=/Game/1660_Buildings/F03/Textures/tloleayo_2K_Albedo_jpg
-MRUItem17=/Game/1660_Buildings/F03/Materials/ROOF
-MRUItem18=/Game/1660_Buildings/F03/Materials/References/ROOF
-MRUItem19=/Game/1660_Buildings/F05/Materials/References/ROOF
+MRUItem0=/Game/TimeWalkMaterials/PlaceholderMaterial
+MRUItem1=/Game/1660_Buildings/F05/Materials/References/ROOF
+MRUItem2=/Game/1660_Buildings/F05/Materials/ROOF
+MRUItem3=/Game/TimeWalkMaterials/LayeredGrass
+MRUItem4=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem5=/Game/1660_Buildings/Old_Medieval_Windmill_01_SM_Windmill_Wall
+MRUItem6=/Game/TimeWalkMaterials/1660CastelloColor
+MRUItem7=/Game/1660_Buildings/F01/Geometries/ROOF__Plane
+MRUItem8=/Game/1660_Buildings/F01/Textures/tloleayo_2K_Albedo_jpg
+MRUItem9=/Game/1660_Buildings/F01/Materials/ROOF
+MRUItem10=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem11=/Game/1660_Buildings/F01/Materials/References/ROOF
+MRUItem12=/Game/1660_Buildings/F03/Materials/References/Polished_Concrete_Old
+MRUItem13=/Game/1660_Buildings/F03/Materials/Polished_Concrete_Old
+MRUItem14=/Game/1660_Buildings/F01/Textures/Rock_cold_Albedo_jpg
+MRUItem15=/Game/1660_Buildings/F01/Materials/Rock
+MRUItem16=/Game/1660_Buildings/F01/Materials/References/Wood
+MRUItem17=/Game/1660_Buildings/F02/Materials/References/ROOF
+MRUItem18=/Game/1660_Buildings/F02/Materials/ROOF
+MRUItem19=/Game/1660_Buildings/F03/Textures/tloleayo_2K_Albedo_jpg
 
 [MaterialEditor]
 PrimType=1
@@ -1176,6 +1177,7 @@ PerWorldEditorSettings=(("/Game/1660.1660", (LoadedEditorRegions=((Min=(X=-10248
 /Game/1660_Buildings/F01/Geometries/ROOF__Plane.ROOF__Plane=1
 /Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass=1
 /Game/TimeWalkMaterials/LayeredGrass.LayeredGrass=1
+/Game/1660_Buildings/F05/Materials/ROOF.ROOF=1
 
 [RootWindow]
 ScreenPosition=X=97.000 Y=88.000
@@ -2316,7 +2318,7 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.Show
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
