--- a/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -267,7 +267,7 @@ MaterialExpressionLandscapeLayerBlend="\"Object\" "
 LandscapeStreamingProxy="\"Object.Landscape.PerLODOverrideMaterials\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -302,7 +302,7 @@ LandscapeStreamingProxy.WorldPartition=True
 LandscapeStreamingProxy.Input=True
 LandscapeStreamingProxy.Actor=True
 StaticMeshActor.TransformCommon=True
-StaticMeshActor.StaticMesh=True
+StaticMeshActor.StaticMesh=False
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=False
 StaticMeshActor.Collision=False
@@ -881,7 +881,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/TimeWalkMaterials
+ContentBrowserDrawer.SelectedPaths=/Game/Material/Materials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -905,7 +905,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/1660_Buildings/F05/Materials
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1180,7 +1180,7 @@ PerWorldEditorSettings=(("/Game/1660.1660", (LoadedEditorRegions=((Min=(X=-10248
 /Game/1660_Buildings/F05/Materials/ROOF.ROOF=1
 
 [RootWindow]
-ScreenPosition=X=97.000 Y=88.000
+ScreenPosition=X=770.000 Y=12.000
 WindowSize=X=1857.000 Y=1169.000
 InitiallyMaximized=False
 
@@ -2253,6 +2253,12 @@ Voice.TimeStamp=2023.05.17-15.43.23
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2023.05.17-15.43.20
 MovieSceneCapture.LastCompileMethod=Unknown
+SQLiteCore.TimeStamp=2023.05.17-15.49.09
+SQLiteCore.LastCompileMethod=Unknown
+GeoReferencing.TimeStamp=2023.05.17-15.49.11
+GeoReferencing.LastCompileMethod=Unknown
+GeoReferencingEditor.TimeStamp=2023.05.17-15.49.11
+GeoReferencingEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
