Fixed windmill materials, added sailing galleon, added rocking motion to boat

--- a/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -377,6 +377,7 @@ MaterialExpressionVectorParameter="\"Object\" "
 MaterialExpressionParameter="\"Object\" "
 InterchangeGenericAssetsPipeline="\"Object\" "
 InterchangePipelineBase="\"Object\" "
+ChildActorComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1047,6 +1048,53 @@ InterchangeGenericAssetsPipeline.Animations=True
 InterchangeGenericAssetsPipeline.Materials=True
 InterchangeGenericAssetsPipeline.MaterialX=True
 InterchangeGenericAssetsPipeline.Textures=True
+BP_GalleonFullSails_C.TransformCommon=True
+BP_GalleonFullSails_C.Rendering=True
+BP_GalleonFullSails_C.Replication=True
+BP_GalleonFullSails_C.Collision=True
+BP_GalleonFullSails_C.HLOD=True
+BP_GalleonFullSails_C.Physics=True
+BP_GalleonFullSails_C.Networking=True
+BP_GalleonFullSails_C.WorldPartition=True
+BP_GalleonFullSails_C.Input=True
+BP_GalleonFullSails_C.Actor=True
+BP_GalleonFullSails_C.Tick=True
+BP_GalleonFullSails_C.Events=True
+BoatRocking_BP_C.TransformCommon=True
+BoatRocking_BP_C.Rendering=True
+BoatRocking_BP_C.Replication=True
+BoatRocking_BP_C.Collision=True
+BoatRocking_BP_C.HLOD=True
+BoatRocking_BP_C.Physics=True
+BoatRocking_BP_C.Networking=True
+BoatRocking_BP_C.WorldPartition=True
+BoatRocking_BP_C.Input=True
+BoatRocking_BP_C.Actor=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.Tags=True
+ChildActorComponent.Cooking=True
+BoatRocking_BP_C.Default=True
+BoatRocking_BP_C.Tick=True
+BoatRocking_BP_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.Sockets=True
+SceneComponent.ComponentTick=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+ChildActorComponent.Variable=True
+ChildActorComponent.Sockets=True
+ChildActorComponent.ComponentTick=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -1167,26 +1215,26 @@ StaticMeshActor.Materials=True
 DatasmithImportOptions.Process=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Windmill/FbxScene_Old_Medieval_Windmill_01
-MRUItem1=/Game/Windmill/Wall_01
-MRUItem2=/Game/1660_Buildings/j01/Materials/References/Translucent_Glass_Gray
-MRUItem3=/Game/1660_Buildings/j01/Materials/Translucent_Glass_Gray
-MRUItem4=/Game/1660_Buildings/j01/Geometries/j01_002
-MRUItem5=/Game/1660_Buildings/F01/Geometries/Fo1_Windows_002
-MRUItem6=/Game/1660_Buildings/F06/Geometries/F06_005
-MRUItem7=/Game/1660_Buildings/F05/Geometries/F05_004
-MRUItem8=/Game/1660_Buildings/F03/Geometries/fo3_004
-MRUItem9=/Game/1660_Buildings/F02/Geometries/Fo2_004
-MRUItem10=/Game/1660_Buildings/J02/Geometries/j02_007
-MRUItem11=/Game/1660_Buildings/J03/Geometries/j03_002
-MRUItem12=/Game/1660_Buildings/j01/Textures/Bricks057_2K_Color_jpg
-MRUItem13=/Game/1660_Buildings/j01/Materials/Bricks
-MRUItem14=/Game/1660_Buildings/J02/Materials/References/ROOF
-MRUItem15=/Game/1660_Buildings/J02/Materials/ROOF
-MRUItem16=/Game/1660_Buildings/J03/Materials/Bricks
-MRUItem17=/Game/1660_Buildings/J03/Materials/Wood
-MRUItem18=/Game/1660_Buildings/J03/Textures/M_2ad21e10e3a76122b9cac3e7c59d1385_jpg
-MRUItem19=/Game/1660_Buildings/J03/Materials/M_2ad21e10e3a76122b9cac3e7c59d1385
+MRUItem0=/Game/Blueprints/BoatRocking_BP
+MRUItem1=/Game/Blueprints/BP_GalleonFullSails
+MRUItem2=/Game/Windmill/FbxScene_Old_Medieval_Windmill_01
+MRUItem3=/Game/Windmill/Wall_01
+MRUItem4=/Game/1660_Buildings/j01/Materials/References/Translucent_Glass_Gray
+MRUItem5=/Game/1660_Buildings/j01/Materials/Translucent_Glass_Gray
+MRUItem6=/Game/1660_Buildings/j01/Geometries/j01_002
+MRUItem7=/Game/1660_Buildings/F01/Geometries/Fo1_Windows_002
+MRUItem8=/Game/1660_Buildings/F06/Geometries/F06_005
+MRUItem9=/Game/1660_Buildings/F05/Geometries/F05_004
+MRUItem10=/Game/1660_Buildings/F03/Geometries/fo3_004
+MRUItem11=/Game/1660_Buildings/F02/Geometries/Fo2_004
+MRUItem12=/Game/1660_Buildings/J02/Geometries/j02_007
+MRUItem13=/Game/1660_Buildings/J03/Geometries/j03_002
+MRUItem14=/Game/1660_Buildings/j01/Textures/Bricks057_2K_Color_jpg
+MRUItem15=/Game/1660_Buildings/j01/Materials/Bricks
+MRUItem16=/Game/1660_Buildings/J02/Materials/References/ROOF
+MRUItem17=/Game/1660_Buildings/J02/Materials/ROOF
+MRUItem18=/Game/1660_Buildings/J03/Materials/Bricks
+MRUItem19=/Game/1660_Buildings/J03/Materials/Wood
 
 [MaterialEditor]
 PrimType=1
@@ -1416,9 +1464,10 @@ PerWorldEditorSettings=(("/Game/1660.1660", (LoadedEditorRegions=((Min=(X=-10248
 /Game/1660_Buildings/F05/Geometries/F05_004.F05_004=1
 /Game/1660_Buildings/F06/Geometries/F06_005.F06_005=1
 /Game/1660_Buildings/j01/Materials/Translucent_Glass_Gray.Translucent_Glass_Gray=1
+/Game/Blueprints/BP_GalleonFullSails.BP_GalleonFullSails=1
 
 [RootWindow]
-ScreenPosition=X=444.000 Y=97.000
+ScreenPosition=X=390.000 Y=34.000
 WindowSize=X=1905.000 Y=1268.000
 InitiallyMaximized=False
 
@@ -2813,7 +2862,7 @@ bShowParentClassInOverrides=True
 bShowEmptySections=True
 bShowAccessSpecifier=False
 Bookmarks=()
-PerBlueprintSettings=()
+PerBlueprintSettings=(("/Game/Blueprints/BoatRocking_BP.BoatRocking_BP", (WatchedPins=((OwningNode="/Game/Blueprints/BoatRocking_BP.BoatRocking_BP:EventGraph.K2Node_CallFunction_5",PinId=462F4D2D477E74D36508759D71E28DBF),(OwningNode="/Game/Blueprints/BoatRocking_BP.BoatRocking_BP:EventGraph.K2Node_Event_2",PinId=49C17CBC4E9B91D162C0CDBA2172ED0E),(OwningNode="/Game/Blueprints/BoatRocking_BP.BoatRocking_BP:EventGraph.K2Node_CallFunction_6",PinId=7CD0F99045BB458BE149CD8154EAFA6E)))))
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
