--- a/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -452,7 +452,9 @@ WaterRuntimeSettings="\"Object\" "
 WaterEditorSettings="\"Object\" \"Object.ActorDefaults.WaterBodyLakeDefaults.WaterWaves.Object.Water Waves Asset\" \"Object.ActorDefaults.WaterBodyOceanDefaults.WaterWaves.Object.Water Waves Asset\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Aging_2/F01_Bricks.F01_Bricks
+OpenAssetsAtExit=/Game/Aging_2/F02.F02
 OpenAssetsAtExit=/Game/NewLevelSequence.NewLevelSequence
 
 [SlateAdditionalLayoutConfig]
@@ -2011,25 +2013,25 @@ MeshStatisticsProperties.MeshStatistics=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/NewLevelSequence
-MRUItem1=/Game/Aging_2/Test_Inst1
-MRUItem2=/Game/1660_Buildings/F04/Materials/References/Object_5
-MRUItem3=/Game/1660_Buildings/F04/Materials/Object_5
-MRUItem4=/Game/Megascans/Surfaces/Brick_Facade_ulmmbgbo/MI_Brick_Facade_ulmmbgbo_2K
-MRUItem5=/Game/1660_Buildings/F04/Materials/c15461a9cf8f793299cd707093af92fb
-MRUItem6=/Game/1660_Buildings/F04/Materials/Bricks
-MRUItem7=/Game/Aging_2/F04
-MRUItem8=/Game/Aging_2/Aging_RoofF07
-MRUItem9=/Game/Aging_2/F09
-MRUItem10=/Game/Aging_2/F08
-MRUItem11=/Game/1660_Buildings/F07-9/Materials/References/Object_2
-MRUItem12=/Game/1660_Buildings/F07-9/Materials/Object_2
-MRUItem13=/Game/Aging_2/F07
-MRUItem14=/Game/Aging_2/F03
-MRUItem15=/Game/Aging_2/Aging_RoofF02
-MRUItem16=/Game/Aging_2/M_Aging
-MRUItem17=/Game/Aging_2/Aging_Roof
-MRUItem18=/Game/Aging_2/F02
-MRUItem19=/Game/Aging_2/F01_Bricks
+MRUItem1=/Game/Aging_2/F02
+MRUItem2=/Game/Aging_2/F01_Bricks
+MRUItem3=/Game/1660_NewAgingTest
+MRUItem4=/Game/Aging_2/Test_Inst1
+MRUItem5=/Game/1660_Buildings/F04/Materials/References/Object_5
+MRUItem6=/Game/1660_Buildings/F04/Materials/Object_5
+MRUItem7=/Game/Megascans/Surfaces/Brick_Facade_ulmmbgbo/MI_Brick_Facade_ulmmbgbo_2K
+MRUItem8=/Game/1660_Buildings/F04/Materials/c15461a9cf8f793299cd707093af92fb
+MRUItem9=/Game/1660_Buildings/F04/Materials/Bricks
+MRUItem10=/Game/Aging_2/F04
+MRUItem11=/Game/Aging_2/Aging_RoofF07
+MRUItem12=/Game/Aging_2/F09
+MRUItem13=/Game/Aging_2/F08
+MRUItem14=/Game/1660_Buildings/F07-9/Materials/References/Object_2
+MRUItem15=/Game/1660_Buildings/F07-9/Materials/Object_2
+MRUItem16=/Game/Aging_2/F07
+MRUItem17=/Game/Aging_2/F03
+MRUItem18=/Game/Aging_2/Aging_RoofF02
+MRUItem19=/Game/Aging_2/M_Aging
 
 [MaterialEditor]
 PrimType=1
@@ -3506,7 +3508,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/Control
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Double Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.General Foam,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.01 - Blend Controls,MaterialEditorInstanceConstant.ParameterGroups.01- Input Textures,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.02 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Base Layer,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.03 - Middle Layer,MaterialEditorInstanceConstant.ParameterGroups.03- Roughness,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.04 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.04 - Top Layer,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.06 - Translucency,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.07 - Wind,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.Detail Normal Settings,MaterialEditorInstanceConstant.ParameterGroups.FluidSimulation,MaterialEditorInstanceConstant.ParameterGroups.Opacity Mask,MaterialEditorInstanceConstant.ParameterGroups.TwoSided Settings,MaterialEditorInstanceConstant.ParameterGroups.Water Shading,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup
-MaterialInstanceConstant=
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Double Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.General Foam,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.01 - Blend Controls,MaterialEditorInstanceConstant.ParameterGroups.01- Input Textures,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.02 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Base Layer,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.03 - Middle Layer,MaterialEditorInstanceConstant.ParameterGroups.03- Roughness,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.04 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.04 - Top Layer,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.06 - Translucency,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.07 - Wind,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.Detail Normal Settings,MaterialEditorInstanceConstant.ParameterGroups.FluidSimulation,MaterialEditorInstanceConstant.ParameterGroups.Opacity Mask,MaterialEditorInstanceConstant.ParameterGroups.TwoSided Settings,MaterialEditorInstanceConstant.ParameterGroups.Water Shading,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
 AudioEditorSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
