--- a/UE5ProjectFiles/Config/DefaultEngine.ini
+++ b/UE5ProjectFiles/Config/DefaultEngine.ini
@@ -46,6 +46,8 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
