--- a/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5ProjectFiles/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2223,6 +2223,28 @@ BP_1660-F-16_C.WorldPartition=True
 BP_1660-F-16_C.Events=True
 BP_1660-F-16_Hans_Dreper_C.TransformCommon=True
 BP_1660-F-16_Hans_Dreper_C.Networking=True
+BP_1660-G-10_Cornelis_Pietersen_C.TransformCommon=True
+BP_1660-G-10_Cornelis_Pietersen_C.Rendering=True
+BP_1660-G-10_Cornelis_Pietersen_C.Replication=True
+BP_1660-G-10_Cornelis_Pietersen_C.Collision=True
+BP_1660-G-10_Cornelis_Pietersen_C.HLOD=True
+BP_1660-G-10_Cornelis_Pietersen_C.Physics=True
+BP_1660-G-10_Cornelis_Pietersen_C.Networking=True
+BP_1660-G-10_Cornelis_Pietersen_C.WorldPartition=True
+BP_1660-G-10_Cornelis_Pietersen_C.Input=True
+BP_1660-G-10_Cornelis_Pietersen_C.Actor=True
+BP_1660-G-09_Gillis_Pietersen_C.TransformCommon=True
+BP_1660-G-09_Gillis_Pietersen_C.Rendering=True
+BP_1660-G-09_Gillis_Pietersen_C.Replication=True
+BP_1660-G-09_Gillis_Pietersen_C.Collision=True
+BP_1660-G-09_Gillis_Pietersen_C.HLOD=True
+BP_1660-G-09_Gillis_Pietersen_C.Physics=True
+BP_1660-G-09_Gillis_Pietersen_C.Networking=True
+BP_1660-G-09_Gillis_Pietersen_C.WorldPartition=True
+BP_1660-G-09_Gillis_Pietersen_C.Input=True
+BP_1660-G-09_Gillis_Pietersen_C.Actor=True
+BP_1660-G-09_Gillis_Pietersen_C.Tick=True
+BP_1660-G-09_Gillis_Pietersen_C.Events=True
 
 [PluginBrowser]
 InstalledPlugins=MetaHuman
@@ -2233,6 +2255,10 @@ InstalledPlugins=Streamline
 InstalledPlugins=WMFCodecs
 
 [PlacementMode]
+RecentlyPlaced=/Game/Megascans/3D_Assets/Concrete_Ceiling_Beam_ujzjee0va/S_Concrete_Ceiling_Beam_ujzjee0va_lod3_Var1.S_Concrete_Ceiling_Beam_ujzjee0va_lod3_Var1;
+RecentlyPlaced=/Game/1660_Buildings/G09/Materials/Age_Dirt_Materials/G09_ROOF.G09_ROOF;
+RecentlyPlaced=/Game/1660_Buildings/G09/Materials/Age_Dirt_Materials/G09_WOOD.G09_WOOD;
+RecentlyPlaced=/Game/1660_Buildings/G09/Materials/Age_Dirt_Materials/G09.G09;
 RecentlyPlaced=/Game/1660_Buildings/j01/Materials/Translucent_Glass_Gray.Translucent_Glass_Gray;
 RecentlyPlaced=/Game/1660_Buildings/F04/Materials/Age_Dirt_Materials/F04_Wood.F04_Wood;
 RecentlyPlaced=/Game/1660_Buildings/F04/Materials/Age_Dirt_Materials/F04_ROOF.F04_ROOF;
@@ -2249,10 +2275,6 @@ RecentlyPlaced=/Game/1660_Buildings/F05/Materials/Age_Dirt_Materials/F05_ROOF.F0
 RecentlyPlaced=/Game/1660_Buildings/F05/Materials/Age_Dirt_Materials/F05.F05;
 RecentlyPlaced=/Game/1660_Buildings/F03/Materials/Age_Dirt_Materials/F03_WOOD.F03_WOOD;
 RecentlyPlaced=/Game/1660_Buildings/F03/Materials/Age_Dirt_Materials/F03.F03;
-RecentlyPlaced=/Game/1660_Buildings/F03/Materials/Age_Dirt_Materials/F03_Window.F03_Window;
-RecentlyPlaced=/Game/1660_Buildings/F03/Materials/Age_Dirt_Materials/F03_ROOF.F03_ROOF;
-RecentlyPlaced=/Game/1660_Buildings/F02/Materials/Age_Dirt_Materials/F02_WOOD.F02_WOOD;
-RecentlyPlaced=/Game/1660_Buildings/F02/Materials/Age_Dirt_Materials/F02_ROOF.F02_ROOF;
 None=======
 
 [ContentBrowser]
@@ -2269,7 +2291,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/1660_Buildings/F07/Materials/Age_Dirt_Materials
-ContentBrowserDrawer.SelectedPaths=/Game/1660_Buildings/F16
+ContentBrowserDrawer.SelectedPaths=/Game/1660_Buildings/G09/Materials/Age_Dirt_Materials
 None=======
 None=======
 ContentBrowserDrawer.PluginFilters=
@@ -2389,26 +2411,26 @@ MeshStatisticsProperties.MeshStatistics=False
 RectLight.Light=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/1660_Buildings/F16/BP_1660-F-16_Hans_Dreper
-MRUItem1=/Game/1660_Buildings/F16/BP_1660-F-16
-MRUItem2=/Game/1660_Buildings/F07/BP_1660-F-07_Augustine_Heerman
-MRUItem3=/Game/1660_Buildings/F12/BP_1660-F-12_Johannes_de_Decker
-MRUItem4=/Game/1660_Buildings/F11/BP_F11
-MRUItem5=/Game/1660_Buildings/F10/BP_F10
-MRUItem6=/Game/1660_Buildings/F09/BP_F09
-MRUItem7=/Game/1660_Buildings/F08/BP_F08
-MRUItem8=/Game/1660_Buildings/F07/BP_F07
-MRUItem9=/Game/1660_Buildings/G10/BP_G10
-MRUItem10=/Game/1660_Buildings/F16/BP_F16
-MRUItem11=/Game/1660_Buildings/G11/BP_G11
-MRUItem12=/Game/1660_Buildings/G11/Materials/Age_Dirt_Materials/G11_Wood
-MRUItem13=/Game/1660_Buildings/F08/Materials/Age_Dirt_Materials/F08_Wood
-MRUItem14=/Game/1660_Buildings/F07/Materials/Age_Dirt_Materials/F07_DOOR
-MRUItem15=/Game/1660_Buildings/F04/BP_1660-F-04_ditto
-MRUItem16=/Game/1660_Buildings/F06/BP_1660-F-06_Pack_House
-MRUItem17=/Game/1660_Buildings/F04/Materials/Age_Dirt_Materials/F04_Wood
-MRUItem18=/Game/1660_Buildings/F04/Materials/References/Object_5
-MRUItem19=/Game/1660_Buildings/F04/Materials/Object_5
+MRUItem0=/Game/1660_Buildings/G09/BP_1660-G-09_Gillis_Pietersen
+MRUItem1=/Game/1660_Buildings/G09/Materials/Age_Dirt_Materials/G09_ROOF
+MRUItem2=/Game/1660_Buildings/F16/BP_1660-F-16_Hans_Dreper
+MRUItem3=/Game/1660_Buildings/F16/BP_1660-F-16
+MRUItem4=/Game/1660_Buildings/F07/BP_1660-F-07_Augustine_Heerman
+MRUItem5=/Game/1660_Buildings/F12/BP_1660-F-12_Johannes_de_Decker
+MRUItem6=/Game/1660_Buildings/F11/BP_F11
+MRUItem7=/Game/1660_Buildings/F10/BP_F10
+MRUItem8=/Game/1660_Buildings/F09/BP_F09
+MRUItem9=/Game/1660_Buildings/F08/BP_F08
+MRUItem10=/Game/1660_Buildings/F07/BP_F07
+MRUItem11=/Game/1660_Buildings/G10/BP_G10
+MRUItem12=/Game/1660_Buildings/F16/BP_F16
+MRUItem13=/Game/1660_Buildings/G11/BP_G11
+MRUItem14=/Game/1660_Buildings/G11/Materials/Age_Dirt_Materials/G11_Wood
+MRUItem15=/Game/1660_Buildings/F08/Materials/Age_Dirt_Materials/F08_Wood
+MRUItem16=/Game/1660_Buildings/F07/Materials/Age_Dirt_Materials/F07_DOOR
+MRUItem17=/Game/1660_Buildings/F04/BP_1660-F-04_ditto
+MRUItem18=/Game/1660_Buildings/F06/BP_1660-F-06_Pack_House
+MRUItem19=/Game/1660_Buildings/F04/Materials/Age_Dirt_Materials/F04_Wood
 
 [MaterialEditor]
 PrimType=1
@@ -2854,7 +2876,7 @@ BRUSH=../../../../../../github/Manhattan-buildings/ManhattanBuildings/Content/
 FBX=../../../../../../github/Manhattan-buildings/ManhattanBuildings/Content/
 FBXAnim=../../../../../../github/Manhattan-buildings/ManhattanBuildings/Content/
 GenericImport=D:/Ted/F04/UDSM
-GenericImport=D:/Ted/F12/UDSM
+GenericImport=D:/Ted/G09/UDSM
 None=======
 GenericExport=../../../../../../github/Manhattan-buildings/ManhattanBuildings/Content/
 GenericOpen=../../../../../../github/Manhattan-buildings/ManhattanBuildings/Content/
@@ -4222,6 +4244,7 @@ BP_1660-F-11_Pieter_Lourenssen_C=PostProcessVolume.Color Grading.Color Grading,P
 BP_1660-G-10_Cornelis_Pietersen_C=PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Lens.Lens
 BP_1660-G-11_Jochim_Pietersen_Kuyter_C=PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Lens.Lens
 BP_1660-F-16_Hans_Dreper_C=PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Lens.Lens
+BP_1660-G-09_Gillis_Pietersen_C=PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Lens.Lens
 
 [MaterialInstanceEditor]
 bShowGrid=True
